kubernetes/clusterplex/deployment-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clusterplex-orchestrator
  namespace: clusterplex
  labels:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: orchestrator
spec:
  replicas: 0
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: clusterplex
      app.kubernetes.io/name: orchestrator
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: clusterplex
        app.kubernetes.io/name: orchestrator
    spec:
      containers:
        - name: clusterplex-orchestrator
          image: ghcr.io/pabloromeo/clusterplex_orchestrator:1.4.16
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3500
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
