kubernetes/clusterplex/deployment-pms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clusterplex-pms
  namespace: clusterplex
  labels:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: pms
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: clusterplex
      app.kubernetes.io/name: pms
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: clusterplex
        app.kubernetes.io/name: pms
    spec:
      containers:
        - name: clusterplex-pms
          image: linuxserver/plex:1.43.3
          imagePullPolicy: Always
          ports:
            - name: plex
              containerPort: 32400
              protocol: TCP
            - name: relay
              containerPort: 32499
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: transcode
              mountPath: /transcode
          startupProbe:
            httpGet:
              path: /identity
              port: plex
            periodSeconds: 15
            timeoutSeconds: 15
            failureThreshold: 80
          readinessProbe:
            httpGet:
              path: /identity
              port: plex
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 20
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "4"
              memory: 8Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: clusterplex-pms-config-owned
        - name: media
          nfs:
            server: 192.168.1.100
            path: /mnt/epool/media
        - name: transcode
          persistentVolumeClaim:
            claimName: clusterplex-transcode
