kubernetes/clusterplex/service-orchestrator.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterplex-orchestrator
  namespace: clusterplex
  labels:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: orchestrator
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3500
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: orchestrator
