kubernetes/clusterplex/service-pms-remote-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterplex-pms-remote
  namespace: clusterplex
  labels:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: pms
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: pms
  ports:
    - name: plex-remote
      protocol: TCP
      port: 32400
      targetPort: plex
      nodePort: 32443
