kubernetes/clusterplex/service-pms.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterplex-pms
  namespace: clusterplex
  labels:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: pms
spec:
  type: ClusterIP
  ports:
    - name: plex
      port: 32400
      targetPort: plex
      protocol: TCP
    - name: relay
      port: 32499
      targetPort: relay
      protocol: TCP
  selector:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: pms
