kubernetes/clusterplex/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterplex-worker
  namespace: clusterplex
  labels:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: worker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3501
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/instance: clusterplex
    app.kubernetes.io/name: worker
