kubernetes/clusterplex/ingress-pms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clusterplex-pms
  namespace: clusterplex
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: clusterplex.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterplex-pms
                port:
                  number: 32400
